--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "book": "1.3.3",
     "debug": "3.1.0",
-    "esm": "3.0.34",
+    "esm": "3.2.25",
     "human-readable-ids": "1.0.3",
     "koa": "2.5.1",
     "koa-router": "7.4.0",
     "localenv": "0.2.2",
     "optimist": "0.6.1",
     "pump": "3.0.0",
-    "tldjs": "2.3.1"
+    "tldjs": "2.3.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "mocha": "5.1.1",
